# hcz_das_view

./: .gitignore  AGENTS.md  README.md  das_view_main.py  pyproject.toml
.github/workflows/: ci.yml  release-smoke.yml
das_view/: __init__.py
das_view/acceleration/: __init__.py  backend.py  benchmark.py  cupy_backend.py  device.py  numpy_backend.py  validation.py
docs/: 01_project_baseline.md  02_architecture.md  03_old_code_review.md  04_data_formats.md  05_development_log.md  06_testing.md  07_roadmap.md  08_project_handoff.md  09_tutorial_user_manual.ipynb
examples/: denoise_file.py  event_detection_file.py  filter_file.py  fk_file.py  fk_filter_file.py  gpu_benchmark.py  gui_manual_validation_checklist.py  moveout_file.py  performance_smoke.py  plot_waveform.py  preprocess_file.py  preview_file.py  qc_file.py  read_and_plot_zd_h5.py  real_world_validation_package.py  roi_export_file.py  run_gui.py  spectral_attributes_file.py  spectrum_file.py  statistics_file.py  validate_file.py  validate_local_samples.py
packaging/: README_windows_packaging.md  build_windows.ps1  hcz_das_view.spec
tests/: conftest.py  test_acceleration_backend.py  test_acceleration_benchmark.py  test_acceleration_diagnostics.py  test_acceleration_validation.py  test_api_import_boundaries.py  test_ci_workflows.py  test_cli_entrypoints.py  test_cli_extensions.py  test_core_data_model.py  test_data_service.py  test_denoise_cli.py  test_denoise_plotting.py  test_denoise_processing.py  test_denoise_service.py  test_display_backends.py  test_display_downsample.py  test_event_detection_example.py  test_events_analysis.py  test_events_service.py  test_export.py  test_filter_example.py  test_filter_service.py  test_filters.py  test_fk_analysis.py  test_fk_example.py  test_fk_filter_analysis.py  test_fk_filter_example.py  test_fk_filter_service.py  test_fk_plotting.py  test_fk_service.py  test_gpu_cli.py  test_gpu_examples.py  test_gpu_optional_paths.py  test_gui_advanced_analysis_models.py  test_gui_advanced_analysis_smoke.py  test_gui_i18n.py  test_gui_large_file_models.py  test_gui_manual_validation_checklist.py  test_gui_smoke.py  (+53 more)
tools/: check_artifacts.py  check_cli_help.py  check_notebook_safety.py
(+71 files in other folders)
